--- a/Clustering/data/abbPascalClusteringData.ipynb
+++ b/Clustering/data/abbPascalClusteringData.ipynb
@@ -7,14 +7,8 @@
    "outputs": [],
    "source": [
     "# Import\n",
-    "import time\n",
-    "import random\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.cluster import MiniBatchKMeans, KMeans\n",
-    "from sklearn.metrics.pairwise import pairwise_distances_argmin\n",
-    "from sklearn.datasets.samples_generator import make_blobs"
+    "import pandas as pd"
    ]
   },
   {
@@ -57,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# data\n",
+    "#set variables\n",
     "timeStamp = data1[data1.columns[0]].values\n",
     "x = []\n",
     "\n",
@@ -71,138 +65,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Aufteilung der Datensätze in Entsprechende Gruppen\n",
     "x10000 = []\n",
     "y10000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i <= 11000:\n",
-    "        x10000.append(x[i])\n",
-    "        y10000.append(i)\n",
-    "\n",
     "x11000 = []\n",
     "y11000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 11000 and i <= 12000:\n",
-    "        x11000.append(x[i])\n",
-    "        y11000.append(i)\n",
-    "\n",
     "x20000 = []\n",
     "y20000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 20000 and i <= 30000:\n",
-    "        x20000.append(x[i])\n",
-    "        y20000.append(i) \n",
-    "        \n",
     "x32000 = []\n",
     "y32000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 32000 and i <= 37000:\n",
-    "        x32000.append(x[i])\n",
-    "        y32000.append(i) \n",
-    "        \n",
     "x34000 = []\n",
-    "y34000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 34000 and i <= 37000:\n",
-    "        x34000.append(x[i])\n",
-    "        y34000.append(i)     \n",
-    "        \n",
+    "y34000 = []          \n",
     "x37000 = []\n",
     "y37000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 37000 and i <= 38000:\n",
-    "        x37000.append(x[i])\n",
-    "        y37000.append(i)  \n",
-    "        \n",
     "x38000 = []\n",
-    "y38000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 38000 and i <= 39000:\n",
-    "        x38000.append(x[i])\n",
-    "        y38000.append(i)    \n",
-    "        \n",
+    "y38000 = []  \n",
     "x39000 = []\n",
     "y39000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 39000 and i <= 40000:\n",
-    "        x39000.append(x[i])\n",
-    "        y39000.append(i)\n",
-    "        \n",
     "x40000 = []\n",
     "y40000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 40000 and i <= 41000:\n",
-    "        x40000.append(x[i])\n",
-    "        y40000.append(i) \n",
-    "        \n",
     "x41000 = []\n",
-    "y41000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 41000 and i <= 50000:\n",
-    "        x41000.append(x[i])\n",
-    "        y41000.append(i) \n",
-    "        \n",
+    "y41000 = []     \n",
     "x50000 = []\n",
     "y50000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 50000 and i <= 71000:\n",
-    "        x50000.append(x[i])\n",
-    "        y50000.append(i)\n",
-    "        \n",
     "x71000 = []\n",
     "y71000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 71000 and i <= 80000:\n",
-    "        x71000.append(x[i])\n",
-    "        y71000.append(i)\n",
-    "        \n",
     "x80000 = []\n",
     "y80000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 80000 and i <= 100000:\n",
-    "        x80000.append(x[i])\n",
-    "        y80000.append(i)\n",
-    "        \n",
     "x100000 = []\n",
     "y100000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 100000 and i <= 110000:\n",
-    "        x100000.append(x[i])\n",
-    "        y100000.append(i)\n",
-    "        \n",
     "x110000 = []\n",
     "y110000 = []\n",
-    "\n",
-    "for i in y:\n",
-    "    if i >= 110000 and i <= 130000:\n",
-    "        x110000.append(x[i])\n",
-    "        y110000.append(i) \n",
-    "        \n",
     "x130000 = []\n",
-    "y130000 = []\n",
+    "y130000 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def abbPascalClusteringData():    \n",
+    "    # Aufteilung der Datensätze in Entsprechende Gruppen    \n",
+    "    for i in y:\n",
+    "        if i <= 11000:\n",
+    "            x10000.append(x[i])\n",
+    "            y10000.append(i)\n",
     "\n",
-    "for i in y:\n",
-    "    if i >= 130000:\n",
-    "        x130000.append(x[i])\n",
-    "        y130000.append(i) "
+    "    for i in y:\n",
+    "        if i >= 11000 and i <= 12000:\n",
+    "            x11000.append(x[i])\n",
+    "            y11000.append(i)\n",
+    "        \n",
+    "    for i in y:\n",
+    "        if i >= 20000 and i <= 30000:\n",
+    "            x20000.append(x[i])\n",
+    "            y20000.append(i) \n",
+    "                \n",
+    "    for i in y:\n",
+    "        if i >= 32000 and i <= 37000:\n",
+    "            x32000.append(x[i])\n",
+    "            y32000.append(i) \n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 34000 and i <= 37000:\n",
+    "            x34000.append(x[i])\n",
+    "            y34000.append(i)     \n",
+    "\n",
+    "    for i in y:\n",
+    "        if i >= 37000 and i <= 38000:\n",
+    "            x37000.append(x[i])\n",
+    "            y37000.append(i)  \n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 38000 and i <= 39000:\n",
+    "            x38000.append(x[i])\n",
+    "            y38000.append(i)    \n",
+    "                \n",
+    "    for i in y:\n",
+    "        if i >= 39000 and i <= 40000:\n",
+    "            x39000.append(x[i])\n",
+    "            y39000.append(i)\n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 40000 and i <= 41000:\n",
+    "            x40000.append(x[i])\n",
+    "            y40000.append(i) \n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 41000 and i <= 50000:\n",
+    "            x41000.append(x[i])\n",
+    "            y41000.append(i) \n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 50000 and i <= 71000:\n",
+    "            x50000.append(x[i])\n",
+    "            y50000.append(i)\n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 71000 and i <= 80000:\n",
+    "            x71000.append(x[i])\n",
+    "            y71000.append(i)\n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 80000 and i <= 100000:\n",
+    "            x80000.append(x[i])\n",
+    "            y80000.append(i)\n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 100000 and i <= 110000:\n",
+    "            x100000.append(x[i])\n",
+    "            y100000.append(i)\n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 110000 and i <= 130000:\n",
+    "            x110000.append(x[i])\n",
+    "            y110000.append(i) \n",
+    "    \n",
+    "    for i in y:\n",
+    "        if i >= 130000:\n",
+    "            x130000.append(x[i])\n",
+    "            y130000.append(i) "
    ]
   },
   {
