--- a/Conversion/abbPascalConversionData.ipynb
+++ b/Conversion/abbPascalConversionData.ipynb
@@ -22,19 +22,17 @@
     "    #Daten einlesen\n",
     "    data = pd.read_pickle(path_pickle);\n",
     "    \n",
-    "    with open(path_csv,'w') as f:\n",
-    "        writer = csv.writer(f)\n",
+    "    with open(path_csv, 'w') as f:\n",
+    "        writer = csv.writer(f, lineterminator='\\n')\n",
     "        \n",
     "        data1 = []\n",
-    "        for j in data:\n",
-    "            data1.append(j)\n",
+    "        for i in df:\n",
+    "            data1.append(i)\n",
     "        writer.writerow(data1)\n",
     "        \n",
-    "        for i in data:\n",
-    "            data2 = []\n",
-    "            for j in data[i]:\n",
-    "                data2.append(j)\n",
-    "            writer.writerow(data2)\n",
+    "        for j in df.values:\n",
+    "            print(j)\n",
+    "            writer.writerow(j)\n",
     "    print(\"Fertig\")"
    ]
   },
