--- a/Conversion/abbPascalConversionDataToParquet.ipynb
+++ b/Conversion/abbPascalConversionDataToParquet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,22 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def main(path_pickle,path_csv):    \n",
+    "def main(path_pickle,path_parquet):    \n",
     "    \n",
     "    #Daten einlesen\n",
     "    data = pd.read_pickle(path_pickle);\n",
-    "    data.to_parquet(path_csv, compression='gzip')\n",
+    "    data.to_parquet(path_parquet, compression='gzip')\n",
     "    \n",
     "    print(\"Fertig\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -41,6 +41,30 @@
    ],
    "source": [
     "main(\"D:/Eclipse Python/DataScience/res/event_ano.pkl\",\"D:/Eclipse Python/DataScience/res/event_ano.parquet.gzip\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def main(path_csv,path_parquet):    \n",
+    "    \n",
+    "    #Daten einlesen\n",
+    "    data = pd.read_csv(path_csv)\n",
+    "    data.to_parquet(path_parquet, compression='gzip')\n",
+    "    \n",
+    "    print(\"Fertig\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "main(\"D:/Eclipse Python/DataScience/res/event_ano.csv\",\"D:/Eclipse Python/DataScience/res/event_ano.parquet.gzip\")"
    ]
   }
  ],
