--- a/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
+++ b/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,21 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Daten einlesen\n",
-    "df_orig = pd.read_parquet(\"D:/Eclipse Python/DataScience/res/event_ano_new.parquet.gzip\")"
+    "df_orig = pd.read_parquet(\"D:/Eclipse Python/DataScience/res/event_ano.parquet.gzip\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = df_orig.set_index(\"event_timestamp\")\n",
+    "del df['Unnamed: 0']\n",
     "df.sort_index(inplace=True)"
    ]
   },
@@ -110,9 +111,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dfExtractErrorWarningInformationMethod(df,extract_value):\n",
-    "    df_extract = df.loc[df['message_severity'] == extract_value]\n",
-    "    return df_extract"
+    "df_extract_index = df_extract.reset_index()"
    ]
   },
   {
@@ -121,37 +120,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_extract_index = df_extract.reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def dfExtractErrorWarningInformationAnd10RowsUpAndDownMethod(df,extract_value):\n",
-    "    data = []\n",
-    "    for i in df:\n",
-    "        data.append(i)\n",
-    "\n",
     "    number = 0\n",
-    "    for h in df.values:\n",
-    "        number = number + 1\n",
-    "        if(h[3] == extract_value):\n",
-    "            for j in range(0,10):\n",
-    "                data.append(df.values[number-j])\n",
-    "                    \n",
-    "            data.append(h)\n",
-    "            for j in range(0,10):\n",
-    "                data.append(df.values[number+j])\n",
-    "     \n",
-    "    return(data)"
+    "    size = df_extract_index.size\n",
+    "    k = range(1,11)\n",
+    "    data1 = []\n",
+    "\n",
+    "    for i in df:\n",
+    "        data1.append(i)\n",
+    "\n",
+    "    for j in df.values:\n",
+    "        if(j[3] == extract_value):\n",
+    "            data2 = []\n",
+    "            data3 = []\n",
+    "            data4 = []\n",
+    "            for k in range(1,11):\n",
+    "                if(number+k <= size and number+k >= 0):\n",
+    "                    data2.append(df.values[number-k])\n",
+    "                    data3.append(j)\n",
+    "                    data4.append(df.values[number+k])\n",
+    "                \n",
+    "                if(k == 10):                    \n",
+    "                    data1.append(data2)\n",
+    "                    data1.append(data3[0])\n",
+    "                    data1.append(data4)\n",
+    "        else:\n",
+    "            number = number + 1\n",
+    "            continue\n",
+    "    print(\"Fertig\")\n",
+    "    return(data1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -161,16 +163,16 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-ab7db569b91a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mErrorsPerLinesPattern\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdfExtractErrorWarningInformationAnd10RowsUpAndDownMethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_extract_index\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m100\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmyErrorsPerLinesPatternArray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrorsPerLinesPattern\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf_ErrorsPerLinesPattern\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyErrorsPerLinesPatternArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf_ErrorsPerLinesPattern\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-1-a4272b0757ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mErrorsPerLinesPattern\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdfExtractErrorWarningInformationAnd10RowsUpAndDownMethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_extract_index\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mmyErrorsPerLinesPatternArray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mErrorsPerLinesPattern\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mdf_ErrorsPerLinesPattern\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmyErrorsPerLinesPatternArray\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdf_ErrorsPerLinesPattern\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_parquet\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"D:/Eclipse Python/DataScience/res/event_ano_new1.parquet.gzip\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompression\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'gzip'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mNameError\u001b[0m: name 'dfExtractErrorWarningInformationAnd10RowsUpAndDownMethod' is not defined"
      ]
     }
    ],
    "source": [
-    "ErrorsPerLinesPattern = dfExtractErrorWarningInformationAnd10RowsUpAndDownMethod(df_extract_index.head(100),1)\n",
+    "ErrorsPerLinesPattern = dfExtractErrorWarningInformationAnd10RowsUpAndDownMethod(df_extract_index,1)\n",
     "myErrorsPerLinesPatternArray = np.asarray(ErrorsPerLinesPattern)\n",
     "df_ErrorsPerLinesPattern = pd.DataFrame(myErrorsPerLinesPatternArray)\n",
-    "df_ErrorsPerLinesPattern"
+    "df_ErrorsPerLinesPattern.to_parquet(\"D:/Eclipse Python/DataScience/res/event_ano_new1.parquet.gzip\", compression='gzip')"
    ]
   },
   {
