--- a/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
+++ b/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
@@ -16,6 +16,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Hallo Herr Zimmermann,\n",
+    "\n",
+    " \n",
+    "\n",
+    "#vielen Dank für Ihre Nachricht.\n",
+    "\n",
+    "#Ich habe mir das Notebook angeschaut und eine Lösung vorgeschlagen. Allerdings verstehe ich das Ziel der Methode nicht ganz, von daher müssten Sie einmal prüfen, ob ich es richtig interpretiert habe.\n",
+    "\n",
+    "#Mein Vorschlag kann folgendes: für ein Fenster von z.B. 10 Nachrichten vorher oder nachher (Achtung: nachher ist für eine Prediction nicht verwendbar! Zukunftsinformation nennt man das) wird gezählt, wie oft die severity-Klassen 1, 2 und 3 vorkommen. Dies lege ich in drei Spalten ab: pre_no_srv_1, pre_no_srv_2, pre_no_srv_3\n",
+    "\n",
+    "#Die vielen Spalten, die durch das „Shiften“ zustande kommen, können Sie auch wieder löschen. Diese sind nur für den Zwischenschritt nötig.\n",
+    "\n",
+    "#So bewege ich mich dauerhaft in der Pandas-Welt und von der Performance (Laufzeit und Speicher) gibt es keine Problem.\n",
+    "\n",
+    " \n",
+    "\n",
+    "#Ist es das, was Sie erreichen wollten?\n",
+    "\n",
+    " \n",
+    "\n",
+    "#Hinsichtlich der Mappings habe ich Ihnen auch noch einen Vorschlag gemacht.\n",
+    "\n",
+    " \n",
+    "\n",
+    "#Viele Grüße und ein schönes Wochenende\n",
+    "\n",
+    "#Peer Küppers "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
