--- a/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
+++ b/RobotLinesAnalysis/abbRobotErrorPatternsLinesAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-28-9bae51b47e44>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-28-9bae51b47e44>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    df_orig = pd.read_parquet(../data_source/event_ano.parquet.gzip)\u001b[0m\n\u001b[1;37m                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "#Daten einlesen\n",
-    "df_orig = pd.read_parquet(\"D:/Eclipse Python/DataScience/res/event_ano.parquet.gzip\")"
+    "df_orig = pd.read_parquet(\"../data_source/event_ano.parquet.gzip\")"
    ]
   },
   {
@@ -164,7 +173,7 @@
    "outputs": [],
    "source": [
     "df_ErrorsPerLinesPattern = dfExtractErrorWarningInformationAnd10RowsUpAndDownPatternAllMethod(df,10)\n",
-    "df_ErrorsPerLinesPattern.to_parquet(\"D:/Eclipse Python/DataScience/res/event_ano_pattern_all.parquet.gzip\", compression='gzip')"
+    "df_ErrorsPerLinesPattern.to_parquet(\"../data_all/event_ano_pattern_all.parquet.gzip\", compression='gzip')"
    ]
   },
   {
@@ -186,7 +195,7 @@
     "        for i in range(1, 4):\n",
     "            df_extract['pre_no_srv_{}'.format(i)] = (df_extract[pre_column_names]==i).sum(axis=1)\n",
     "    \n",
-    "        df_extract.to_parquet(\"D:/Eclipse Python/DataScience/res/event_ano_pattern_single_{}.parquet.gzip\".format(j),compression='gzip')"
+    "        df_extract.to_parquet(\"../data_singels/event_ano_pattern_single_{}.parquet.gzip\".format(j),compression='gzip')"
    ]
   },
   {
@@ -258,7 +267,7 @@
     "                continue        \n",
     "        \n",
     "        print(\"Fertig{}\".format(i))\n",
-    "        dataFrame1.to_parquet(\"C:/Users/Pascal/ABB Projekt/RobotLinesAnalysis/data_dataset/event_ano_pattern_dataset_per_line_line_{}.parquet.gzip\".format(i), compression='gzip')\n",
+    "        dataFrame1.to_parquet(\"../data_dataset/singles/event_ano_pattern_dataset_per_line_line_{}.parquet.gzip\".format(i), compression='gzip')\n",
     "    print(\"Fertig\")"
    ]
   },
@@ -360,7 +369,7 @@
     "                number1 = number1 + 1\n",
     "                continue        \n",
     "        \n",
-    "    dataFrame1.to_parquet(\"C:/Users/Pascal/ABB Projekt/RobotLinesAnalysis/data_dataset/event_ano_pattern_dataset_per_line{}.parquet.gzip\".format(i), compression='gzip')\n",
+    "    dataFrame1.to_parquet(\"../data_dataset/all/event_ano_pattern_dataset_per_line{}.parquet.gzip\".format(i), compression='gzip')\n",
     "    print(\"Fertig\")"
    ]
   },
@@ -379,6 +388,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
